menus of xbalance

--- a/templates/menu.html
+++ b/templates/menu.html
@@ -14,22 +14,35 @@
 
   <ion-side-menu side="left">
     <ion-header-bar class="bar-stable">
-      <h1 class="title">Left</h1>
+      <h1 class="title">Xbalance</h1>
     </ion-header-bar>
     <ion-content>
-      <ion-list>
-        <ion-item nav-clear menu-close ng-click="login()">
-          Login
+         <ion-list>
+       <div>
+
+        <ion-item nav-clear menu-close href="#">
+            <span>Home</span>
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/search">
-          Search
+        <ion-item nav-clear menu-close href="#">
+            <span>Your Balance</span>
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/browse">
-          Browse
+        <ion-item nav-clear menu-close href="#">
+            <span>Selling Approvals</span>
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/playlists">
-          Playlists
+        <ion-item nav-clear menu-close href="#">
+            <span>Transaction History</span>
         </ion-item>
+        <ion-item nav-clear menu-close href="#">
+            <span>About Us</span>
+        </ion-item>
+        <ion-item nav-clear menu-close href="#">
+            <span>FAQ</span>
+        </ion-item>
+        <ion-item nav-clear menu-close href="#">
+            <span>Logout</span>
+        </ion-item>
+       
+        </div>
       </ion-list>
     </ion-content>
   </ion-side-menu>
