--- a/templates/search.html
+++ b/templates/search.html
@@ -1,5 +1,44 @@
-<ion-view view-title="Search">
-  <ion-content>
-    <h1>Search</h1>
-  </ion-content>
+<ion-view view-title="Search Result">
+    <ion-content>
+        <div class="text-center">
+            <div>
+                <label>Area:</label><span>Mulund</span>
+            </div>
+            <div>
+                <label>Categories:</label><span>Mobile</span>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <div class="item item-divider">
+                    Name
+                </div>
+                <ul class="list-unstyled list">
+                    <li class="item">Nokia</li>
+                    <li class="item">Sony</li>
+                    <li class="item">Lava</li>
+                    <li class="item">Micromax</li>
+                    <li class="item">Nokia</li>
+                    <li class="item">Sony</li>
+                    <li class="item">Lava</li>
+                    <li class="item">Micromax</li>
+                </ul>
+            </div>
+            <div class="col">
+                <div class="item item-divider">
+                    Sell Balance
+                </div>
+                <ul class="list-unstyled list">
+                    <li class="item">15000</li>
+                    <li class="item">16000</li>
+                    <li class="item">10000</li>
+                    <li class="item">8000</li>
+                    <li class="item">15000</li>
+                    <li class="item">16000</li>
+                    <li class="item">10000</li>
+                    <li class="item">8000</li>
+                </ul>
+            </div>
+        </div>
+    </ion-content>
 </ion-view>
