--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,37 @@
-<ion-view view-title="Home">
-  <ion-content>
-    <ion-list>
+<ion-view view-title="">
+    <ion-content>
+        <ion-list>
+            <h4>Welcome: <span>Name</span></h4>
+        </ion-list>
+        <label class="item item-input">
+            <span class="input-label">Area</span>
+            <input type="text" placeholder="Enter Your Area">
+        </label>
+        <label class="item item-input item-select">
+            <div class="input-label">
+                Catergories
+            </div>
+            <select>
+                <option>Mobile</option>
+                <option selected>Personal Computers</option>
+                <option>Laptops</option>
+            </select>
 
-   Demo
-    </ion-list>
-  </ion-content>
+        </label>
+        <h6>OR</h6>
+        <hr class="vertical-line">
+        <label class="item item-input item-select">
+            <div class="input-label">
+                Memebership No.
+            </div>
+            <select>
+                <option>123</option>
+                <option selected>1234</option>
+                <option>12345</option>
+            </select>
+        </label>
+        <div class="padding">
+            <button class="button button-block button-positive">Search</button>
+        </div>
+    </ion-content>
 </ion-view>
