--- a/templates/search.html
+++ b/templates/search.html
@@ -8,7 +8,6 @@
                 <label>Categories:</label><span>Mobile</span>
             </div>
         </div>
-        <div class="row">
             <div class="col">
                 <div class="item item-divider">
                     Name
@@ -22,6 +21,7 @@
                     <li class="item">Sony</li>
                     <li class="item">Lava</li>
                     <li class="item">Micromax</li>
+                    <li class="item">iPhone</li>
                 </ul>
             </div>
             <div class="col">
@@ -37,6 +37,7 @@
                     <li class="item">16000</li>
                     <li class="item">10000</li>
                     <li class="item">8000</li>
+                    <li class="item">25000</li>
                 </ul>
             </div>
         </div>
