--- a/templates/home.html
+++ b/templates/home.html
@@ -18,8 +18,10 @@
             </select>
 
         </label>
-        <h6>OR</h6>
-        <hr class="vertical-line">
+        <div class="home-or">
+            <h6>OR</h6>
+            <hr class="vertical-line">
+        </div>
         <label class="item item-input item-select">
             <div class="input-label">
                 Memebership No.
