--- a/templates/home.html
+++ b/templates/home.html
@@ -33,7 +33,7 @@
             </select>
         </label>
         <div class="padding">
-            <button class="button button-block button-positive">Search</button>
+            <a href="#/app/search"><button class="button button-block button-positive">Search</button></a>
         </div>
     </ion-content>
 </ion-view>
