--- a/templates/product.html
+++ b/templates/product.html
@@ -1,4 +1,15 @@
 <ion-view view-title="Product">
     <ion-content>
+    <div style="padding:10px 20px">
+        <div><label><b>Name:</b></label><span>Nokia</span></div>
+        <div><label><b>Sell Balance:</b></label><span>15000</span></div>
+        <h5><b>Details:</b></h5>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+        <div>
+            <button class="button button-block" ng-click="openedit();">
+                Purchase
+            </button>
+        </div>
+    </div>
     </ion-content>
 </ion-view>
