--- a/templates/search.html
+++ b/templates/search.html
@@ -14,15 +14,15 @@
                     Name
                 </div>
                 <ul class="list-unstyled list">
-                    <li class="item">Nokia</li>
-                    <li class="item">Sony</li>
-                    <li class="item">Lava</li>
-                    <li class="item">Micromax</li>
-                    <li class="item">Nokia</li>
-                    <li class="item">Sony</li>
-                    <li class="item">Lava</li>
-                    <li class="item">Micromax</li>
-                    <li class="item">iPhone</li>
+                    <a href="#/app/product"><li class="item">Nokia</li></a>
+                    <a href="#/app/product"><li class="item">Sony</li></a>
+                    <a href="#/app/product"><li class="item">Lava</li></a>
+                    <a href="#/app/product"><li class="item">Micromax</li></a>
+                    <a href="#/app/product"><li class="item">Nokia</li></a>
+                    <a href="#/app/product"><li class="item">Sony</li></a>
+                    <a href="#/app/product"><li class="item">Lava</li></a>
+                    <a href="#/app/product"><li class="item">Micromax</li></a>
+                    <a href="#/app/product"><li class="item">iPhone</li></a>
                 </ul>
             </div>
             <div class="col">
