--- a/templates/search.html
+++ b/templates/search.html
@@ -8,7 +8,7 @@
                 <label>Categories:</label><span>Mobile</span>
             </div>
         </div>
-        <div class="row results" style="overflow-y:scroll;height:260px">
+        <div class="row results">
             <div class="col">
                 <div class="item item-divider">
                     Name
