--- a/templates/product.html
+++ b/templates/product.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Product">
     <ion-content>
-    <div style="padding:10px 20px">
+    <div class="prod-info">
         <div><label><b>Name:</b></label><span>Nokia</span></div>
         <div><label><b>Sell Balance:</b></label><span>15000</span></div>
         <h5><b>Details:</b></h5>
