--- a/templates/product.html
+++ b/templates/product.html
@@ -6,7 +6,7 @@
         <h5><b>Details:</b></h5>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
         <div>
-            <button class="button button-block" ng-click="openedit();">
+            <button class="button button-block button-positive" ng-click="openedit();">
                 Purchase
             </button>
         </div>
