--- a/templates/faq.html
+++ b/templates/faq.html
@@ -1,1 +1,14 @@
-faq
+<ion-view view-title="FAQ's">
+    <ion-content>
+    <div class="prod-info">
+    <h3>Lorem Ipsum is simply dummy text?</h3>
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text</p>
+    <h3>Lorem Ipsum is simply dummy text?</h3>
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text</p>
+    <h3>Lorem Ipsum is simply dummy text?</h3>
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text</p>
+    <h3>Lorem Ipsum is simply dummy text?</h3>
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text</p>
+    </div>
+    </ion-content>
+</ion-view>
