--- a/templates/menu.html
+++ b/templates/menu.html
@@ -20,10 +20,10 @@
          <ion-list>
        <div>
 
-        <ion-item nav-clear menu-close href="#">
+        <ion-item nav-clear menu-close href="#/app/home">
             <span>Home</span>
         </ion-item>
-        <ion-item nav-clear menu-close href="#">
+        <ion-item nav-clear menu-close href="#/app/balance">
             <span>Your Balance</span>
         </ion-item>
         <ion-item nav-clear menu-close href="#">
@@ -32,10 +32,10 @@
         <ion-item nav-clear menu-close href="#">
             <span>Transaction History</span>
         </ion-item>
-        <ion-item nav-clear menu-close href="#">
+        <ion-item nav-clear menu-close href="#/app/aboutus">
             <span>About Us</span>
         </ion-item>
-        <ion-item nav-clear menu-close href="#">
+        <ion-item nav-clear menu-close href="#/app/faq">
             <span>FAQ</span>
         </ion-item>
         <ion-item nav-clear menu-close href="#">
