--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -1,1 +1,8 @@
-About us
+<ion-view view-title="About Us">
+    <ion-content>
+        <div class="prod-info">
+            <h4>About Us</h4>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+        </div>
+    </ioncontent>
+</ionview>
