--- a/templates/purchase.html
+++ b/templates/purchase.html
@@ -10,7 +10,7 @@
             <div class="list">
                 <label class="item item-input">
                     <span class="input-label">Amount:</span>
-                    <input type="text" ng-model="loginData.username">
+                    <input type="text">
                 </label>
                 <label class="item">
                     <button class="button button-block button-positive" type="submit">Reverse</button>
