--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,5 @@
-<ion-view view-title="">
+<ion-view view-title="Welcome">
     <ion-content>
-        <ion-list>
-            <h4>Welcome: <span>Name</span></h4>
-        </ion-list>
         <label class="item item-input">
             <span class="input-label">Area</span>
             <input type="text" placeholder="Enter Your Area">
@@ -19,8 +16,7 @@
 
         </label>
         <div class="home-or">
-            <h6>OR</h6>
-            <hr class="vertical-line">
+            <h6>- OR -</h6>
         </div>
         <label class="item item-input item-select">
             <div class="input-label">
@@ -33,7 +29,9 @@
             </select>
         </label>
         <div class="padding">
-            <a href="#/app/search"><button class="button button-block button-positive">Search</button></a>
+            <a href="#/app/search">
+                <button class="button button-block button-positive">Search</button>
+            </a>
         </div>
     </ion-content>
 </ion-view>
