--- a/templates/yourbalance.html
+++ b/templates/yourbalance.html
@@ -3,20 +3,20 @@
         <div class="row">
             <div class="col">
                 <div class="label-name">
-                    <h5>Purchase Balance</h5>
+                    <h4>Purchase Balance</h4>
                 </div>
-                <label class="item item-input">
+                <label class="item-input">
                     <span class="input-label">Rs</span>
-                    <input type="text">
+                    <span class="input-label">100</span>
                 </label>
             </div>
             <div class="col">
                 <div class="label-name">
-                    <h5>Sell Balance</h5>
+                    <h4>Sell Balance</h4>
                 </div>
-                <label class="item item-input">
+                <label class="item-input">
                     <span class="input-label">Rs</span>
-                    <input type="text">
+                    <span class="input-label">100</span>
                 </label>
             </div>
         </div>
