--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,18 +1,45 @@
 <ion-view view-title="Profile">
     <ion-content>
-        <div class="prod-info">
+        <div class="profile-img">
             <img src="img/ionic.png">
-            <div>
-                <label><b>Name</b>
-                </label>
-            </div>
-            <h5><b>Details:</b></h5>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
-            <div>
-                <button class="button button-block button-positive" ng-click="openedit();">
-                    Purchase
-                </button>
-            </div>
         </div>
+        <label class="item item-input">
+            <div class="input-label">
+                Name
+            </div>
+            <div class="input-label">
+                Sapana Basutkar
+            </div>
+        </label>
+        <label class="item item-input">
+            <div class="input-label">
+                DOB
+            </div>
+            <div class="input-label">
+                24/4/1990
+            </div>
+        </label>
+        <label class="item item-input">
+            <div class="input-label">
+                Age
+            </div>
+            <div class="input-label">
+                48
+            </div>
+        </label>
+        <label class="item item-input">
+            <div class="input-label">
+                Age
+            </div>
+            <div class="input-label">
+                48
+            </div>
+        </label>
+        <div class="btn-edit">
+            <button class="button button-block button-positive">
+                Edit
+            </button>
+        </div>
+
     </ion-content>
 </ion-view>
