--- a/templates/faq.html
+++ b/templates/faq.html
@@ -1,14 +1,28 @@
 <ion-view view-title="FAQ's">
     <ion-content>
-    <div class="prod-info">
-    <h4>Lorem Ipsum is simply dummy text?</h4>
-    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text</p>
-    <h4>Lorem Ipsum is simply dummy text?</h4>
-    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text</p>
-    <h4>Lorem Ipsum is simply dummy text?</h4>
-    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text</p>
-    <h4>Lorem Ipsum is simply dummy text?</h4>
-    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text</p>
-    </div>
+        <div class="prod-info">
+            <p>
+                <b>Lorem Ipsum is simply dummy text?</b>
+                <br/> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.
+            </p>
+            <p>
+                <b>Lorem Ipsum is simply dummy text?</b>
+                <br/> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.
+            </p>
+            <p>
+                <b>Lorem Ipsum is simply dummy text?</b>
+                <br/> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.
+            </p>
+            <p>
+                <b>Lorem Ipsum is simply dummy text?</b>
+                <br/> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.
+            </p>
+            <p>
+                <b>Lorem Ipsum is simply dummy text?</b>
+                <br/> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.
+            </p>
+
+
+        </div>
     </ion-content>
 </ion-view>
