--- a/templates/menu.html
+++ b/templates/menu.html
@@ -26,7 +26,7 @@
         <ion-item nav-clear menu-close href="#/app/balance">
             <span>Your Balance</span>
         </ion-item>
-        <ion-item nav-clear menu-close href="#">
+        <ion-item nav-clear menu-close href="#/app/selling">
             <span>Selling Approvals</span>
         </ion-item>
         <ion-item nav-clear menu-close href="#">
