--- a/templates/search.html
+++ b/templates/search.html
@@ -1,46 +1,56 @@
 <ion-view view-title="Search Result">
     <ion-content>
-        <div class="text-center">
-            <div>
-                <label>Area:</label><span>Mulund</span>
-            </div>
-            <div>
-                <label>Categories:</label><span>Mobile</span>
-            </div>
+       <div class="results">
+        
+
+            <label class="item item-input">
+                <span class="ïnput-label">Area:</span> <span>Mulund</span>
+            </label>
+            <label class="item item-input">
+                <span class="ïnput-label">Categories:</span> <span>Mobile</span>
+            </label>
+
+        <div class="row item item-divider">
+            <div class="col">Name</div>
+            <div class="col">Sell Balance</div>
         </div>
-        <div class="row results">
-            <div class="col">
-                <div class="item item-divider">
-                    Name
-                </div>
-                <ul class="list-unstyled list">
-                    <a href="#/app/product"><li class="item">Nokia</li></a>
-                    <a href="#/app/product"><li class="item">Sony</li></a>
-                    <a href="#/app/product"><li class="item">Lava</li></a>
-                    <a href="#/app/product"><li class="item">Micromax</li></a>
-                    <a href="#/app/product"><li class="item">Nokia</li></a>
-                    <a href="#/app/product"><li class="item">Sony</li></a>
-                    <a href="#/app/product"><li class="item">Lava</li></a>
-                    <a href="#/app/product"><li class="item">Micromax</li></a>
-                    <a href="#/app/product"><li class="item">iPhone</li></a>
-                </ul>
+
+        <a href="#/app/product">
+            <div class="row list">
+                <div class="col">Nokia</div>
+                <div class="col">10000</div>
             </div>
-            <div class="col">
-                <div class="item item-divider">
-                    Sell Balance
-                </div>
-                <ul class="list-unstyled list">
-                    <li class="item">15000</li>
-                    <li class="item">16000</li>
-                    <li class="item">10000</li>
-                    <li class="item">8000</li>
-                    <li class="item">15000</li>
-                    <li class="item">16000</li>
-                    <li class="item">10000</li>
-                    <li class="item">8000</li>
-                    <li class="item">25000</li>
-                </ul>
+        </a>
+        <a href="#/app/product">
+            <div class="row list">
+                <div class="col">Sony</div>
+                <div class="col">15000</div>
             </div>
+        </a>
+        <a href="#/app/product">
+            <div class="row list">
+                <div class="col">Samsung</div>
+                <div class="col">18000</div>
+            </div>
+        </a>
+        <a href="#/app/product">
+            <div class="row list">
+                <div class="col">Apple</div>
+                <div class="col">25000</div>
+            </div>
+        </a>
+        <a href="#/app/product">
+            <div class="row list">
+                <div class="col">Karbon</div>
+                <div class="col">8000</div>
+            </div>
+        </a>
+        <a href="#/app/product">
+            <div class="row list">
+                <div class="col">Xperia</div>
+                <div class="col">10000</div>
+            </div>
+        </a>
         </div>
     </ion-content>
 </ion-view>
