--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Profile">
     <ion-content>
         <div class="profile-img">
-            <img src="img/ionic.png">
+            <img src="img/logo.png">
         </div>
         <label class="item item-input">
             <div class="input-label">
