--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -4,7 +4,7 @@
     </div>
     <ion-content class="has-header">
         <div class="welcome-img">
-            <img src="img/Untitled-2.png">
+            <img src="img/logo.png">
         </div>
         <div>
             <label class="item item-input">
@@ -16,7 +16,7 @@
                 <input type="text" placeholder="">
             </label>
             <div class="padding">
-                <button class="button button-block button-positive" type="submit">Login</button>
+                <a class="button button-block button-positive" type="submit" href="#/app/home">Login</a>
             </div>
 
             <a href="#">Forget Password</a>
