--- a/templates/selling.html
+++ b/templates/selling.html
@@ -3,7 +3,7 @@
         <div class="list">
             
             <ion-item class="item item-thumbnail-left">
-                <img src="img/demo.jpg">
+                <img src="img/logo.png">
                 <h2>Name</h2>
                 <p>Amount</p>
                 <button class="button button-small button-outline button-balanced">
