--- a/templates/menu.html
+++ b/templates/menu.html
@@ -29,7 +29,7 @@
         <ion-item nav-clear menu-close href="#/app/selling">
             <span>Selling Approvals</span>
         </ion-item>
-        <ion-item nav-clear menu-close href="#">
+        <ion-item nav-clear menu-close href="#/app/transaction">
             <span>Transaction History</span>
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/aboutus">
