--- a/templates/addbalance.html
+++ b/templates/addbalance.html
@@ -12,7 +12,9 @@
                     <span class="input-label">Amount:</span>
                     <input type="text">
                 </label>
-                <button class="button button-block button-positive" type="submit">Add Balance</button>
+                <div class="padding">
+                    <button class="button button-block button-positive" type="submit">Add Balance</button>
+                </div>
             </div>
         </form>
     </ion-content>
