--- a/templates/product.html
+++ b/templates/product.html
@@ -1,15 +1,23 @@
 <ion-view view-title="Product">
     <ion-content>
-    <div class="prod-info">
-        <div><label><b>Name:</b></label><span>Nokia</span></div>
-        <div><label><b>Sell Balance:</b></label><span>15000</span></div>
-        <h5><b>Details:</b></h5>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
-        <div>
-            <button class="button button-block button-positive" ng-click="openedit();">
-                Purchase
-            </button>
+        <div class="prod-info">
+            <div>
+                <label><b>Name:</b>
+                </label><span>Nokia</span>
+            </div>
+            <div>
+                <label><b>Sell Balance:</b>
+                </label><span>15000</span>
+            </div>
+            <h5><b>Details:</b></h5>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+            <div>
+                <div class="padding">
+                    <button class="button button-block button-positive" ng-click="openedit();">
+                        Purchase
+                    </button>
+                </div>
+            </div>
         </div>
-    </div>
     </ion-content>
 </ion-view>
