--- a/templates/profile.html
+++ b/templates/profile.html
@@ -35,7 +35,7 @@
                 48
             </div>
         </label>
-        <div class="btn-edit">
+        <div class="btn-edit padding">
             <button class="button button-block button-positive">
                 Edit
             </button>
