--- a/templates/selling.html
+++ b/templates/selling.html
@@ -1,21 +1,22 @@
 <ion-view view-title="Selling Approval">
     <ion-content>
         <div class="list">
-            
+
             <ion-item class="item item-thumbnail-left">
                 <img src="img/logo.png">
                 <h2>Name</h2>
                 <p>Amount</p>
-                <button class="button button-small button-outline button-balanced">
-                    Accept
-                </button>
-                <button class="button button-small button-outline button-assertive">
-                    Decline
-                </button>
+                <div class="padding">
+                    <button class="button button-small button-outline button-balanced">
+                        Accept
+                    </button>
+                </div>
+                <div class="padding">
+                    <button class="button button-small button-outline button-assertive">
+                        Decline
+                    </button>
+                </div>
             </ion-item>
-           
-
         </div>
-
     </ion-content>
 </ion-view>
