--- a/templates/purchase.html
+++ b/templates/purchase.html
@@ -12,9 +12,9 @@
                     <span class="input-label">Amount:</span>
                     <input type="text">
                 </label>
-                <label class="item">
+                <div class="padding">
                     <button class="button button-block button-positive" type="submit">Reverse</button>
-                </label>
+                </div>
             </div>
         </form>
     </ion-content>
