--- a/templates/profile.html
+++ b/templates/profile.html
@@ -8,7 +8,7 @@
                 Name
             </div>
             <div class="input-label">
-                Sapana Basutkar
+                Wholig Technology
             </div>
         </label>
         <label class="item item-input">
@@ -17,14 +17,6 @@
             </div>
             <div class="input-label">
                 24/4/1990
-            </div>
-        </label>
-        <label class="item item-input">
-            <div class="input-label">
-                Age
-            </div>
-            <div class="input-label">
-                48
             </div>
         </label>
         <label class="item item-input">
