--- a/templates/purchase.html
+++ b/templates/purchase.html
@@ -13,7 +13,7 @@
                     <input type="text">
                 </label>
                 <div class="padding">
-                    <button class="button button-block button-positive" type="submit">Reverse</button>
+                    <button class="button button-block button-positive" type="submit">Request</button>
                 </div>
             </div>
         </form>
