--- a/templates/selling.html
+++ b/templates/selling.html
@@ -4,18 +4,17 @@
 
             <ion-item class="item item-thumbnail-left">
                 <img src="img/logo.png">
-                <h2>Name</h2>
-                <p>Amount</p>
-                <div class="padding">
+                <h2>Wohlig Technology</h2>
+                <p>Amount: Rs.10,000</p>
+             
                     <button class="button button-small button-outline button-balanced">
                         Accept
                     </button>
-                </div>
-                <div class="padding">
+              
                     <button class="button button-small button-outline button-assertive">
                         Decline
                     </button>
-                </div>
+              
             </ion-item>
         </div>
     </ion-content>
