--- a/templates/transaction.html
+++ b/templates/transaction.html
@@ -4,9 +4,9 @@
             
             <ion-item class="item item-thumbnail-left">
                 <img src="img/logo.png">
-                <h2>Name</h2>
-                <p>Amount</p>
-                <p>Date</p>
+                <h2>Wohlig Technology</h2>
+                <p>Amount: Rs.20,000</p>
+                <p>Date: 10th Mar 2015</p>
             </ion-item>
            
 
