--- a/templates/yourbalance.html
+++ b/templates/yourbalance.html
@@ -1,27 +1,27 @@
 <ion-view view-title="Your Balance">
     <ion-content>
-        <div class="row">
+        <div class="row text-center">
             <div class="col">
+             
+                    <h4>Rs.100</h4>
+               
                 <div class="label-name">
                     <h4>Purchase Balance</h4>
                 </div>
-                <label class="item-input">
-                    <span class="input-label">Rs</span>
-                    <span class="input-label">100</span>
-                </label>
+               
             </div>
             <div class="col">
+               
+                    <h4>Rs.100</h4>
+               
                 <div class="label-name">
                     <h4>Sell Balance</h4>
                 </div>
-                <label class="item-input">
-                    <span class="input-label">Rs</span>
-                    <span class="input-label">100</span>
-                </label>
+               
             </div>
         </div>
         <div class="padding">
-            <button class="button button-block button-positive btn-small" ng-click="openedit();">Add Balance</button>
+            <button class="button button-block button-positive" ng-click="openedit();">Add Balance</button>
         </div>
     </ion-content>
 </ion-view>
