--- a/templates/menu.html
+++ b/templates/menu.html
@@ -14,7 +14,7 @@
 
   <ion-side-menu side="left">
     <ion-header-bar class="bar-stable">
-      <h1 class="title">Xbalance</h1>
+      <h1 class="title">Menu</h1>
     </ion-header-bar>
     <ion-content>
          <ion-list>
@@ -22,6 +22,9 @@
 
         <ion-item nav-clear menu-close href="#/app/home">
             <span>Home</span>
+        </ion-item>
+        <ion-item nav-clear menu-close href="#/app/profile">
+            <span>My Profile</span>
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/balance">
             <span>Your Balance</span>
