--- a/templates/search.html
+++ b/templates/search.html
@@ -1,54 +1,55 @@
 <ion-view view-title="Search Result">
     <ion-content>
-       <label class="item item-input">
-                <span class="ïnput-label">Area:</span> <span>Mulund</span>
-            </label>
-            <label class="item item-input">
-                <span class="ïnput-label">Categories:</span> <span>Mobile</span>
-            </label>
-       <div class="results">
-      
+        <div class="row item item-divider">
+            <div class="col">Area</div>
+            <div class="col">Category</div>
+        </div>
+        
+        <ion-list class="lesspadding">
+            <ion-item>
+                <div class="row">
+                    <div class="col">Mulund</div>
+                    <div class="col">Mobile</div>
+                </div>
+            </ion-item>
+           
+        </ion-list>
+
+
         <div class="row item item-divider">
             <div class="col">Name</div>
             <div class="col">Sell Balance</div>
         </div>
 
-        <a href="#/app/product">
-            <div class="row list">
-                <div class="col">Nokia</div>
-                <div class="col">10000</div>
-            </div>
-        </a>
-        <a href="#/app/product">
-            <div class="row list">
-                <div class="col">Sony</div>
-                <div class="col">15000</div>
-            </div>
-        </a>
-        <a href="#/app/product">
-            <div class="row list">
-                <div class="col">Samsung</div>
-                <div class="col">18000</div>
-            </div>
-        </a>
-        <a href="#/app/product">
-            <div class="row list">
-                <div class="col">Apple</div>
-                <div class="col">25000</div>
-            </div>
-        </a>
-        <a href="#/app/product">
-            <div class="row list">
-                <div class="col">Karbon</div>
-                <div class="col">8000</div>
-            </div>
-        </a>
-        <a href="#/app/product">
-            <div class="row list">
-                <div class="col">Xperia</div>
-                <div class="col">10000</div>
-            </div>
-        </a>
-        </div>
+        <ion-list class="lesspadding">
+            <ion-item href="#/app/product">
+                <div class="row">
+                    <div class="col">Nokia</div>
+                    <div class="col">Rs.10,000</div>
+                </div>
+            </ion-item> <ion-item href="#/app/product">
+                <div class="row">
+                    <div class="col">Nokia</div>
+                    <div class="col">Rs.10,000</div>
+                </div>
+            </ion-item> <ion-item href="#/app/product">
+                <div class="row">
+                    <div class="col">Nokia</div>
+                    <div class="col">Rs.10,000</div>
+                </div>
+            </ion-item> <ion-item href="#/app/product">
+                <div class="row">
+                    <div class="col">Nokia</div>
+                    <div class="col">Rs.10,000</div>
+                </div>
+            </ion-item> <ion-item href="#/app/product">
+                <div class="row">
+                    <div class="col">Nokia</div>
+                    <div class="col">Rs.10,000</div>
+                </div>
+            </ion-item>
+        </ion-list>
+        
+
     </ion-content>
 </ion-view>
