--- a/templates/addbalance.html
+++ b/templates/addbalance.html
@@ -1,5 +1,5 @@
 <ion-modal-view>
-    <ion-header-bar>
+    <ion-header-bar class="bar-calm">
         <h1 class="title">Add Balance</h1>
         <div class="buttons">
             <button class="button button-clear" ng-click="closeModal()">Close</button>
@@ -13,7 +13,7 @@
                     <input type="text">
                 </label>
                 <div class="padding">
-                    <button class="button button-block button-positive" type="submit">Add Balance</button>
+                    <button class="button button-block button-outline button-balanced" type="submit">Add Balance</button>
                 </div>
             </div>
         </form>
