--- a/templates/faq.html
+++ b/templates/faq.html
@@ -1,6 +1,6 @@
 <ion-view view-title="FAQ's">
     <ion-content>
-        <div class="prod-info">
+        <div class="padding">
             <p>
                 <b>Lorem Ipsum is simply dummy text?</b>
                 <br/> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.
