--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Welcome">
+<ion-view view-title="Login">
     <ion-content>
         <label class="item item-input">
             <span class="input-label">Area</span>
@@ -30,7 +30,7 @@
         </label>
         <div class="padding">
             <a href="#/app/search">
-                <button class="button button-block button-positive">Search</button>
+                <button class="button button-block button-outline button-balanced">Search</button>
             </a>
         </div>
     </ion-content>
