--- a/templates/product.html
+++ b/templates/product.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Product">
     <ion-content>
-        <div class="prod-info">
+        <div class="padding">
             <div>
                 <label><b>Name:</b>
                 </label><span>Nokia</span>
@@ -13,7 +13,7 @@
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
             <div>
                 <div class="padding">
-                    <button class="button button-block button-positive" ng-click="openedit();">
+                    <button class="button button-block button-outline button-balanced" ng-click="openedit();">
                         Purchase
                     </button>
                 </div>
