--- a/templates/profile.html
+++ b/templates/profile.html
@@ -28,7 +28,7 @@
             </div>
         </label>
         <div class="btn-edit padding">
-            <button class="button button-block button-positive">
+            <button class="button button-block button-outline button-balanced">
                 Edit
             </button>
         </div>
