--- a/templates/yourbalance.html
+++ b/templates/yourbalance.html
@@ -21,7 +21,7 @@
             </div>
         </div>
         <div class="padding">
-            <button class="button button-block button-positive" ng-click="openedit();">Add Balance</button>
+            <button class="button button-block button-outline button-balanced" ng-click="openedit();">Add Balance</button>
         </div>
     </ion-content>
 </ion-view>
