--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,6 +1,6 @@
 <ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content>
-    <ion-nav-bar class="bar-stable">
+    <ion-nav-bar class="bar-calm">
       <ion-nav-back-button>
       </ion-nav-back-button>
 
@@ -13,7 +13,7 @@
   </ion-side-menu-content>
 
   <ion-side-menu side="left">
-    <ion-header-bar class="bar-stable">
+    <ion-header-bar class="bar-calm">
       <h1 class="title">Menu</h1>
     </ion-header-bar>
     <ion-content>
@@ -31,6 +31,7 @@
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/selling">
             <span>Selling Approvals</span>
+            <span class="badge badge-assertive">1</span>
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/transaction">
             <span>Transaction History</span>
