--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,5 +1,5 @@
 <ion-view>
-    <div class="bar bar-header">
+    <div class="bar bar-header bar-calm">
         <div class="h1 title">Welcome</div>
     </div>
     <ion-content class="has-header">
@@ -16,7 +16,7 @@
                 <input type="text" placeholder="">
             </label>
             <div class="padding">
-                <a class="button button-block button-positive" type="submit" href="#/app/home">Login</a>
+                <a class="button button-block button-outline button-balanced" type="submit" href="#/app/home">Login</a>
             </div>
 
             <div class="padding"><a href="#">Forgot Password</a></div>
