--- a/templates/profile.html
+++ b/templates/profile.html
@@ -27,6 +27,14 @@
                 48
             </div>
         </label>
+         <label class="item item-input">
+            <div class="input-label">
+               Description
+            </div>
+            <div class="input-label">
+                <textarea></textarea>
+            </div>
+        </label>
         <div class="btn-edit padding">
             <button class="button button-block button-outline button-balanced">
                 Edit
