--- a/templates/search.html
+++ b/templates/search.html
@@ -25,26 +25,26 @@
             <ion-item href="#/app/product">
                 <div class="row">
                     <div class="col">Nokia</div>
-                    <div class="col">Rs.10,000</div>
+                    <div class="col">Rs.60,000</div>
                 </div>
             </ion-item> <ion-item href="#/app/product">
                 <div class="row">
-                    <div class="col">Nokia</div>
-                    <div class="col">Rs.10,000</div>
+                    <div class="col">Sony</div>
+                    <div class="col">Rs.50,000</div>
                 </div>
             </ion-item> <ion-item href="#/app/product">
                 <div class="row">
-                    <div class="col">Nokia</div>
-                    <div class="col">Rs.10,000</div>
+                    <div class="col">Karbon</div>
+                    <div class="col">Rs.40,000</div>
                 </div>
             </ion-item> <ion-item href="#/app/product">
                 <div class="row">
-                    <div class="col">Nokia</div>
-                    <div class="col">Rs.10,000</div>
+                    <div class="col">Micromax</div>
+                    <div class="col">Rs.30,000</div>
                 </div>
             </ion-item> <ion-item href="#/app/product">
                 <div class="row">
-                    <div class="col">Nokia</div>
+                    <div class="col">Samsung</div>
                     <div class="col">Rs.10,000</div>
                 </div>
             </ion-item>
