--- a/templates/profile.html
+++ b/templates/profile.html
@@ -13,18 +13,18 @@
         </label>
         <label class="item item-input">
             <div class="input-label">
-                DOB
+               Area
             </div>
             <div class="input-label">
-                24/4/1990
+                Mulund
             </div>
         </label>
         <label class="item item-input">
             <div class="input-label">
-                Age
+                Category
             </div>
             <div class="input-label">
-                48
+                Mobile
             </div>
         </label>
          <label class="item item-input">
