--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -19,7 +19,7 @@
                 <a class="button button-block button-outline button-balanced" type="submit" href="#/app/home">Login</a>
             </div>
 
-            <div class="padding"><a href="#">Forgot Password</a></div>
+            <div class="padding"><a href="#">Forgot Password?</a></div>
         </div>
     </ion-content>
 </ion-view>
