--- a/templates/product.html
+++ b/templates/product.html
@@ -7,7 +7,7 @@
             </div>
             <div>
                 <label><b>Sell Balance:</b>
-                </label><span>15000</span>
+                </label><span>Rs.60,000</span>
             </div>
             <h5><b>Details:</b></h5>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
