--- a/templates/profile.html
+++ b/templates/profile.html
@@ -8,12 +8,12 @@
                 Name
             </div>
             <div class="input-label">
-                Wholig Technology
+                Wohlig Technology
             </div>
         </label>
         <label class="item item-input">
             <div class="input-label">
-               Area
+                Area
             </div>
             <div class="input-label">
                 Mulund
@@ -27,12 +27,12 @@
                 Mobile
             </div>
         </label>
-         <label class="item item-input">
+        <label class="item item-input item-text-wrap">
             <div class="input-label">
-               Description
+                Description
             </div>
             <div class="input-label">
-                <textarea></textarea>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
             </div>
         </label>
         <div class="btn-edit padding">
