--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Login">
+<ion-view view-title="Welcome">
     <ion-content>
         <label class="item item-input">
             <span class="input-label">Area</span>
