--- a/templates/purchase.html
+++ b/templates/purchase.html
@@ -9,6 +9,10 @@
         <form ng-submit="doLogin()">
             <div class="list">
                 <label class="item item-input">
+                    <span class="input-label">Purchase Limit:</span>
+Rs.60,000
+                </label>
+                <label class="item item-input">
                     <span class="input-label">Amount:</span>
                     <input type="text">
                 </label>
