--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,6 +1,6 @@
 <ion-view>
     <div class="bar bar-header bar-calm">
-        <div class="h1 title">Welcome</div>
+        <div class="h1 title">Login</div>
     </div>
     <ion-content class="has-header">
         <div class="welcome-img">
